fixed artist's name & song's covers

--- a/src/styles/SongDetail.css
+++ b/src/styles/SongDetail.css
@@ -10,7 +10,7 @@
   opacity: 0.7;
   background-color: "black";
   transition: all 0.1s ease-in-out;
-  width: 100%;
+  width: 93%;
   height: 100%;
   transform: scale(0.9);
   overflow: hidden;
@@ -45,12 +45,16 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: left;
   background-color: transparent;
   opacity: 1;
   max-height: 100px;
   padding-bottom: 40px;
-  max-width: 250px;
+  padding-left: 20px;
+  
+  max-width: 280px;
+  width: fit-content;
+  min-width: 170px;
   text-shadow: 1px 1px 2px black;
 }
 
@@ -61,6 +65,7 @@
 
 .artist-img > .artist-name {
   color: white;
+  padding-left: 20px;
 }
 
 .song-detail:hover {
